# wikifun

./: LICENSE  README.md  noxfile.py  pyproject.toml
src/wikifun/: console.py
tests/: test_console.py
